# lab09

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Doxyfile  LICENSE.txt  README.md
.github/workflows/: ci.yml  release.yml
_logs/polly/clang-cxx14/: log-0.txt  log.txt
cmake/Hunter/: config.cmake
demo/: main.cpp
include/: print.hpp
sources/: print.cpp  solver.cpp
